--- a/templates/tracks.html
+++ b/templates/tracks.html
@@ -22,20 +22,20 @@
 
         <div class="grid-wrapper">
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/2KLwPaRDOB87XOYAT2fgxh?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>pufpuff</p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/7qPHokLDeNrXTWrjhgudLj?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>Don Toliver popped off</p></center>
             </div>
             <div class="grid-item">
                 <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/4M6pDt6pICsMiiwXGkufLe?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                 <center><p>☁️🌫️🌪️</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/26hOm7dTtBi0TdpDGl141t?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>no point in turning off the lights </p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/5unjCay0kUjuej5ebn4nS4?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>🕺</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/4gKWtJGlhxKKSyV65llt2G?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>zoomin 💨</p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/7AUHZBFJ5c7fiLhl0I9r5S?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>💨</p></center>
             </div>
             <div class="grid-item">
                 <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/754hhnczVNu3ibRaoAcujX?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
@@ -46,7 +46,7 @@
                 <center><p>CARTI GOAT 🐐</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/48pyUxg9RYuwie5M9R7qRn?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/7iLA6PQeQWRjLDHOJgGpj5?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                 <center><p>🗣🔊</p></center>
             </div>
             <div class="grid-item">
@@ -54,7 +54,7 @@
                 <center><p>🪨</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/5Dz1lxtIg3Z9Nnm7Mnk5b5?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/4mAwxhMBANouZbcrgvgxeY?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                 <center><p>tre flip 🛹</p></center>
             </div>
 
