--- a/templates/tracks.html
+++ b/templates/tracks.html
@@ -4,7 +4,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>ZuhairHK</title>
+        <title>zuhairhk</title>
         <link rel="stylesheet" href="static/style.css">
         <meta property="og:type" content="website">
         <meta property="og:title" content="Zu's Tracks" />
