--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,36 +1,39 @@
-<!doctype html>
-
-<html lang="en">
-  
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="/">Main <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="/blog">Blog <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="/projects">Projects <span class="sr-only">(current)</span></a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
+<!DOCTYPE html>
+<html>
   <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <title>ZuhairHK</title>
+    <title>zuhairhk</title>
+    <link rel="stylesheet" type="text/css" href="static/styles.css">
+    <script src="https://kit.fontawesome.com/e355c8b74c.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <h1>
-      <center>Projects</center>
-    </h1>
+    <nav>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/projects">Projects</a></li>
+        <li><a href="/resume" target="_blank">Resume</a></li>
+      </ul>
+    </nav>
+    <main>
+      <h1 style="padding: 20px;">stop lurking, page under construction!</h1>
+      <ul>
+        <li>
+          <h2>Project 1</h2>
+          <p>Description of Project 1</p>
+        </li>
+        <li>
+          <h2>Project 2</h2>
+          <p>Description of Project 2</p>
+        </li>
+        <li>
+          <h2>Project 3</h2>
+          <p>Description of Project 3</p>
+        </li>
+      </ul>
+    </main>
+    <footer>
+      <a href="mailto:zuhair.khan@torontomu.ca" target="_blank" title="Contact"><i class="fa fa-envelope" style="font-size: 2em; margin-right: 30px; color: #e7e7e7;"></i></a>
+      <a href="https://github.com/zuhairhk" target="_blank" title="Github"><i class="fab fa-github" style="font-size: 2em; margin-right: 30px; color: #e7e7e7;"></i></a>
+      <a href="https://www.linkedin.com/in/zuhairhkhan" target="_blank" title="LinkedIn"><i class="fab fa-linkedin" style="font-size: 2em; margin-right: 30px; color: #e7e7e7;"></i></a>
+  </footer>
   </body>
 </html>
