--- a/templates/index.html
+++ b/templates/index.html
@@ -3,37 +3,36 @@
   <head>
     <title>zuhairhk</title>
     <link rel="stylesheet" type="text/css" href="static/styles.css">
+    <script src="https://kit.fontawesome.com/e355c8b74c.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <header>
-      <h1>My Name</h1>
-      <nav>
-        <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/">Projects</a></li>
-          <li><a href="/resume">Resume</a></li>
-          <li><a href="/tracks">Tracks</a></li>
-        </ul>
-      </nav>
-    </header>
     <section id="banner">
-      <h2>Welcome to my portfolio!</h2>
-      <p>I am a web developer with a passion for creating beautiful and functional websites.</p>
+      <h2>Zuhair H. Khan</h2>
+      <p>Toronto Based Engineering Student</p>
     </section>
-    <section id="about">
-      <h2>About Me</h2>
-      <p>Insert your bio or introduction here.</p>
-    </section>
-    <section id="portfolio">
-      <h2>Portfolio</h2>
-      <p>Insert your portfolio items here, with links to the projects you've worked on.</p>
-    </section>
-    <section id="contact">
-      <h2>Contact</h2>
-      <p>Insert your contact information here, such as your email address or social media handles.</p>
-    </section>
+
+    <div class="about-me" style="font-family: cascadia code;">
+        <p class="animated-text">
+          I am a second-year computer engineering student at <a href="https://www.torontomu.ca/" target="_blank">Toronto Metropolitan University</a>. My passion lies in computer programming, with a focus on full stack development and IoT. In my spare time, I enjoy creating automation scripts to streamline daily tasks. When I'm not programming, I enjoy skateboarding, playing soccer or basketball, and gaming <a href="/aim" target="_blank">(#highestrankedNAinval!)</a>.
+        </p>
+    </div>
+
+    <p class="vertical-center">
+        <!-- <a href="/" style= "font-size: 3em; margin-right: 80px;" title="Home"><i class="fas fa-home"></i></a> -->
+        <a href="/resume" target="_blank" style="font-size: 3em; margin-right: 80px; color: #8f5ba5;" title="Resume"><i class="far fa-file-alt"></i></a>
+        <a href="/projects" style= "font-size: 3em; margin-right: 80px; color: #8f5ba5;" title="Projects"><i class="fas fa-folder-open"></i></a>
+        <a href="/tracks" target="_blank" style="font-size: 3em; color: #8f5ba5;" title="Tracks"><i class="fas fa-headphones"></i></a>
+    </p>
+
+    <!-- <p style="width: 50%; margin: 0 auto; font-family:Verdana;">
+        <center>Current Setup</center>
+    </p>
+    <img style="height: 300px; width: auto; padding-bottom: 10px;" src="static/setup1.jpg" alt="Current Setup"> -->
+
     <footer>
-      <p>Copyright © 2023 My Name</p>
+        <a href="mailto:zuhair.khan@torontomu.ca" target="_blank" title="Contact"><i class="fa fa-envelope" style="font-size: 2em; margin-right: 30px; color: #e7e7e7;"></i></a>
+        <a href="https://github.com/zuhairhk" target="_blank" title="Github"><i class="fab fa-github" style="font-size: 2em; margin-right: 30px; color: #e7e7e7;"></i></a>
+        <a href="https://www.linkedin.com/in/zuhairhkhan" target="_blank" title="LinkedIn"><i class="fab fa-linkedin" style="font-size: 2em; margin-right: 30px; color: #e7e7e7;"></i></a>
     </footer>
   </body>
 </html>
