--- a/templates/index.html
+++ b/templates/index.html
@@ -13,15 +13,15 @@
 
     <div class="about-me" style="font-family: cascadia code;">
         <p class="animated-text">
-          I am a second-year computer engineering student at <a href="https://www.torontomu.ca/" target="_blank">Toronto Metropolitan University</a>. My passion lies in computer programming, with a focus on full stack development and IoT. In my spare time, I enjoy creating automation scripts to streamline daily tasks. When I'm not programming, I enjoy skateboarding, playing soccer or basketball, and gaming <a href="/aim" target="_blank">(#highestrankedNAinval!)</a>.
+          I am a second-year computer engineering student at <a href="https://www.torontomu.ca/" target="_blank">Toronto Metropolitan University</a>. My passion lies in computer programming, with a focus on full stack development and IoT. In my spare time, I enjoy creating automation scripts to streamline daily tasks. When I'm not programming, I enjoy skateboarding, playing soccer or basketball, and gaming <a href="/epik_aim" target="_blank">(#highestrankedNAinval!)</a>.
         </p>
     </div>
 
     <p class="vertical-center">
         <!-- <a href="/" style= "font-size: 3em; margin-right: 80px;" title="Home"><i class="fas fa-home"></i></a> -->
-        <a href="/resume" target="_blank" style="font-size: 3em; margin-right: 80px; color: #8f5ba5;" title="Resume"><i class="far fa-file-alt"></i></a>
-        <a href="/projects" style= "font-size: 3em; margin-right: 80px; color: #8f5ba5;" title="Projects"><i class="fas fa-folder-open"></i></a>
-        <a href="/tracks" target="_blank" style="font-size: 3em; color: #8f5ba5;" title="Tracks"><i class="fas fa-headphones"></i></a>
+        <a href="/resume" target="_blank" style="font-size: 3em; margin-right: 80px;" title="Resume"><i class="far fa-file-alt"></i></a>
+        <a href="/projects" style= "font-size: 3em; margin-right: 80px;" title="Projects"><i class="fas fa-folder-open"></i></a>
+        <a href="/tracks" target="_blank" style="font-size: 3em;" title="Tracks"><i class="fas fa-headphones"></i></a>
     </p>
 
     <!-- <p style="width: 50%; margin: 0 auto; font-family:Verdana;">
@@ -30,9 +30,9 @@
     <img style="height: 300px; width: auto; padding-bottom: 10px;" src="static/setup1.jpg" alt="Current Setup"> -->
 
     <footer>
-        <a href="mailto:zuhair.khan@torontomu.ca" target="_blank" title="Contact"><i class="fa fa-envelope" style="font-size: 2em; margin-right: 30px; color: #e7e7e7;"></i></a>
-        <a href="https://github.com/zuhairhk" target="_blank" title="Github"><i class="fab fa-github" style="font-size: 2em; margin-right: 30px; color: #e7e7e7;"></i></a>
-        <a href="https://www.linkedin.com/in/zuhairhkhan" target="_blank" title="LinkedIn"><i class="fab fa-linkedin" style="font-size: 2em; margin-right: 30px; color: #e7e7e7;"></i></a>
+        <a href="mailto:zuhair.khan@torontomu.ca" target="_blank" title="Contact"><i class="fa fa-envelope" style="font-size: 2em; margin-right: 30px;"></i></a>
+        <a href="https://github.com/zuhairhk" target="_blank" title="Github"><i class="fab fa-github" style="font-size: 2em; margin-right: 30px;"></i></a>
+        <a href="https://www.linkedin.com/in/zuhairhkhan" target="_blank" title="LinkedIn"><i class="fab fa-linkedin" style="font-size: 2em; margin-right: 30px;"></i></a>
     </footer>
   </body>
 </html>
