--- a/templates/projects.html
+++ b/templates/projects.html
@@ -6,34 +6,39 @@
     <script src="https://kit.fontawesome.com/e355c8b74c.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <nav>
+    <nav class="topnav" style="background-color: rgb(55, 16, 92); padding: 5px;">
       <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/projects">Projects</a></li>
-        <li><a href="/resume" target="_blank">Resume</a></li>
+        <li><a href="/"><u>Home</u></a></li>
+        <li><a href="/projects"><u>Projects</u></a></li>
+        <li><a href="/resume" target="_blank"><u>Resume</u></a></li>
       </ul>
     </nav>
     <main>
-      <h1 style="padding: 20px;">stop lurking, page under construction!</h1>
-      <ul>
-        <li>
-          <h2>Project 1</h2>
-          <p>Description of Project 1</p>
-        </li>
-        <li>
-          <h2>Project 2</h2>
-          <p>Description of Project 2</p>
-        </li>
-        <li>
-          <h2>Project 3</h2>
-          <p>Description of Project 3</p>
-        </li>
-      </ul>
+      <div class="grid-wrapper">
+        <div class="grid-item">
+          <p>Hello</p>
+        </div>
+        <div class="grid-item">
+
+        </div>
+        <div class="grid-item">
+
+        </div>
+        <div class="grid-item">
+
+        </div>
+        <div class="grid-item">
+
+        </div>
+        <div class="grid-item">
+          
+        </div>
+      </div>
     </main>
     <footer>
-      <a href="mailto:zuhair.khan@torontomu.ca" target="_blank" title="Contact"><i class="fa fa-envelope" style="font-size: 2em; margin-right: 30px; color: #e7e7e7;"></i></a>
-      <a href="https://github.com/zuhairhk" target="_blank" title="Github"><i class="fab fa-github" style="font-size: 2em; margin-right: 30px; color: #e7e7e7;"></i></a>
-      <a href="https://www.linkedin.com/in/zuhairhkhan" target="_blank" title="LinkedIn"><i class="fab fa-linkedin" style="font-size: 2em; margin-right: 30px; color: #e7e7e7;"></i></a>
+      <a href="mailto:zuhair.khan@torontomu.ca" target="_blank" title="Contact"><i class="fa fa-envelope" style="font-size: 2em; margin-right: 30px;"></i></a>
+      <a href="https://github.com/zuhairhk" target="_blank" title="Github"><i class="fab fa-github" style="font-size: 2em; margin-right: 30px;"></i></a>
+      <a href="https://www.linkedin.com/in/zuhairhkhan" target="_blank" title="LinkedIn"><i class="fab fa-linkedin" style="font-size: 2em; margin-right: 30px;"></i></a>
   </footer>
   </body>
 </html>
