--- a/static/styles.css
+++ b/static/styles.css
@@ -36,16 +36,23 @@ header {
 nav ul {
   list-style: none;
   display: flex;
+  justify-content: center;
 }
 
 nav ul li {
-  margin-right: 1rem;
+  margin-right: 4rem;
+  font-size: 1.3rem;
+  font-family: cascadia code;
 }
 
 nav ul li a {
   color: #f0f0f0;
   text-decoration: none;
   transition: all 0.2s ease;
+}
+
+.topnav a:hover {
+  color: rgb(150, 150, 150);
 }
 
 .about-me  a:hover {
@@ -109,6 +116,20 @@ section p {
   height: 25vh;
 }
 
+.vertical-center a {
+  color: #9559af;
+  text-decoration: none;
+  transition: all 0.2s ease;
+}
+
+.vertical-center a:hover {
+  color: #d4d4d4;
+}
+
+.vertical-center p {
+  font-size: 0.25rem;
+}
+
 .about-me {
   padding-top: 65px;
   font-family: cascadia code;
@@ -133,6 +154,36 @@ section p {
   }
 }
 
+.grid-wrapper {
+  display: grid;
+  align-items: center;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 375px 375px 50px;
+  grid-gap: 1.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 1rem;
+}
+.grid-item {
+  margin: auto;
+  background-color: rgb(29, 29, 29);
+  border-radius: 10px;
+  width: 95%;
+  height: 95%;
+}
+.grid-item:hover {
+  background-color: rgb(53, 53, 53);
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+.grid-item p {
+  padding-left: 1rem;
+  background-color: transparent;
+  color: aliceblue;
+}
+
 /* Style for the footer */
 footer {
   position: fixed;
@@ -145,4 +196,14 @@ footer {
   color: #ffffff;
   text-align: center;
   padding: 10px;
+}
+
+footer a {
+  color: #e7e7e7;
+  text-decoration: none;
+  transition: all 0.2s ease;
+}
+
+footer a:hover {
+  color: #afafaf;
 }
