Working on projects, added icons

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>zuhairhk</title>
+    <link rel="icon" href="static/icon.png">
     <link rel="stylesheet" type="text/css" href="static/styles.css">
     <script src="https://kit.fontawesome.com/e355c8b74c.js" crossorigin="anonymous"></script>
   </head>
@@ -16,22 +17,69 @@
     <main>
       <div class="grid-wrapper">
         <div class="grid-item">
-          <p>Hello</p>
+          <div class="content-wrapper">
+            <h2>Digitized Daniel</h2>
+            <img src="static/digitized_daniel.png">
+            <div class="flex-container">
+              <p>IoT Compatible discord bot with additional features such as facial/eye tracking, image generator, web scraping, and pomodoro timer.</p>
+              <p style="font-size: 0.72rem; padding: 0; padding-bottom: 10px;">Technologies Used: Nextcord API, OpenCV, TuyaIoT API, PIL, asyncio</p>
+            </div>
+          </div>
         </div>
-        <div class="grid-item">
 
-        </div>
         <div class="grid-item">
+          <div class="content-wrapper">
+            <h2>Personal Website</h2>
+              <img src="static/logo.png">
+              <div class="flex-container">
+                <p>Fullstack web application </p>
+                <p style="font-size: 0.72rem; padding: 0; padding-bottom: 10px;">Technologies Used: Nextcord API, OpenCV, TuyaIoT API, PIL, asyncio</p>
+              </div>
+            </div>
+        </div>
 
-        </div>
         <div class="grid-item">
+          <div class="content-wrapper">
+            <h2>Light Controller</h2>
+              <img src="static/digitized_daniel.png">
+              <div class="flex-container">
+                <p>IoT Compatible discord bot with additional features such as facial/eye tracking, image generator, web scraping, and pomodoro timer.</p>
+                <p style="font-size: 0.72rem; padding: 0; padding-bottom: 10px;">Technologies Used: Nextcord API, OpenCV, TuyaIoT API, PIL, asyncio</p>
+              </div>
+            </div>
+        </div>
 
-        </div>
         <div class="grid-item">
+          <div class="content-wrapper">
+            <h2>Link</h2>
+              <img src="static/digitized_daniel.png">
+              <div class="flex-container">
+                <p>IoT Compatible discord bot with additional features such as facial/eye tracking, image generator, web scraping, and pomodoro timer.</p>
+                <p style="font-size: 0.72rem; padding: 0; padding-bottom: 10px;">Technologies Used: Nextcord API, OpenCV, TuyaIoT API, PIL, asyncio</p>
+              </div>
+            </div>
+        </div>
 
-        </div>
         <div class="grid-item">
-          
+          <div class="content-wrapper">
+            <h2>Auto Food</h2>
+              <img src="static/digitized_daniel.png">
+              <div class="flex-container">
+                <p>IoT Compatible discord bot with additional features such as facial/eye tracking, image generator, web scraping, and pomodoro timer.</p>
+                <p style="font-size: 0.72rem; padding: 0; padding-bottom: 10px;">Technologies Used: Nextcord API, OpenCV, TuyaIoT API, PIL, asyncio</p>
+              </div>
+            </div>
+        </div>
+
+        <div class="grid-item">
+          <div class="content-wrapper">
+            <h2>Spotify Playlist Sorter</h2>
+              <img src="static/digitized_daniel.png">
+              <div class="flex-container">
+                <p>IoT Compatible discord bot with additional features such as facial/eye tracking, image generator, web scraping, and pomodoro timer.</p>
+                <p style="font-size: 0.72rem; padding: 0; padding-bottom: 10px;">Technologies Used: Nextcord API, OpenCV, TuyaIoT API, PIL, asyncio</p>
+              </div>
+            </div>
         </div>
       </div>
     </main>
