--- a/templates/rimi.html
+++ b/templates/rimi.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>ZuhairHK</title>
+    <link rel="icon" href="static/icon.png">
 </head>
 
 <body style="background-color: rgb(56, 58, 59); color: white; margin: auto; width: 50%; padding: 100px;">
