--- a/static/styles.css
+++ b/static/styles.css
@@ -164,8 +164,11 @@ section p {
   padding-right: 1rem;
   padding-top: 1rem;
 }
+
 .grid-item {
-  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: rgb(29, 29, 29);
   border-radius: 10px;
   width: 95%;
@@ -173,17 +176,39 @@ section p {
 }
 .grid-item:hover {
   background-color: rgb(53, 53, 53);
-  width: 100%;
-  height: 100%;
   cursor: pointer;
   transition: all 0.2s ease;
 }
+.grid-item h2 {
+  color: rgb(233, 232, 232);
+  font-family: cascadia code;
+  font-size: 1.5rem;
+}
 .grid-item p {
-  padding-left: 1rem;
-  background-color: transparent;
+  padding-left: 1.25rem;
   color: aliceblue;
+  font-family: cascadia code;
+  font-size: 1rem;
 }
 
+.content-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.grid-item img {
+  width: 300px;
+  height: 150px;
+  object-fit: contain;
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 /* Style for the footer */
 footer {
   position: fixed;
