--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>zuhairhk</title>
+    <link rel="icon" href="static/icon.png">
     <link rel="stylesheet" type="text/css" href="static/styles.css">
     <script src="https://kit.fontawesome.com/e355c8b74c.js" crossorigin="anonymous"></script>
   </head>
