--- a/templates/paging.html
+++ b/templates/paging.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>ZuhairHK</title>
+    <link rel="icon" href="static/icon.png">
     <link rel="stylesheet" href="static/style.css">
 </head>
 
