--- a/templates/tracks.html
+++ b/templates/tracks.html
@@ -5,6 +5,7 @@
     <head>
         <meta charset="utf-8">
         <title>zuhairhk</title>
+        <link rel="icon" href="static/icon.png">
         <link rel="stylesheet" href="static/style.css">
         <meta property="og:type" content="website">
         <meta property="og:title" content="Zu's Tracks" />
