--- a/templates/projects.html
+++ b/templates/projects.html
@@ -21,8 +21,8 @@
             <h2>Digitized Daniel</h2>
             <img src="static/digitized_daniel.png">
             <div class="flex-container">
-              <p>IoT Compatible discord bot with additional features such as facial/eye tracking, image generator, web scraping, and pomodoro timer.</p>
-              <p style="font-size: 0.72rem; padding: 0; padding-bottom: 10px;">Technologies Used: Nextcord API, OpenCV, TuyaIoT API, PIL, asyncio</p>
+              <p>IoT Compatible discord bot with additional features such as facial/eye tracking, image generator, web scraping, slash commands, and pomodoro timer.</p>
+              <p style="font-size: 0.72rem; padding: 0; padding-bottom: 10px;"><u>Technologies Used:</u> Python, Nextcord API, OpenCV, TuyaIoT API, PIL, asyncio</p>
             </div>
           </div>
         </div>
@@ -32,8 +32,8 @@
             <h2>Personal Website</h2>
               <img src="static/logo.png">
               <div class="flex-container">
-                <p>Fullstack web application </p>
-                <p style="font-size: 0.72rem; padding: 0; padding-bottom: 10px;">Technologies Used: Nextcord API, OpenCV, TuyaIoT API, PIL, asyncio</p>
+                <p>Full-stack personal portfolio web application.</p>
+                <p style="font-size: 0.72rem; padding: 5px; padding-bottom: 10px;"><u>Technologies Used:</u><br>Frontend --> HTML/CSS, Backend --> Python, Framework --> Flask, Hosting --> Linode (Linux Ubuntu VM instance), Proxied through --> Cloudflare</p>
               </div>
             </div>
         </div>
@@ -41,21 +41,21 @@
         <div class="grid-item">
           <div class="content-wrapper">
             <h2>Light Controller</h2>
-              <img src="static/digitized_daniel.png">
+              <img src="static/light_controller.png">
               <div class="flex-container">
-                <p>IoT Compatible discord bot with additional features such as facial/eye tracking, image generator, web scraping, and pomodoro timer.</p>
-                <p style="font-size: 0.72rem; padding: 0; padding-bottom: 10px;">Technologies Used: Nextcord API, OpenCV, TuyaIoT API, PIL, asyncio</p>
+                <p style="padding-right: 10px;">Automated the lighting in my room using the TuyaIoT API. Compatible with hands-free voice commands and keyboard input.</p>
+                <p style="font-size: 0.72rem; padding: 0; padding-bottom: 10px;"><u>Technologies Used:</u> Python, TuyaIoT API, Google Speech Recognition, pyttsx3</p>
               </div>
             </div>
         </div>
 
         <div class="grid-item">
           <div class="content-wrapper">
-            <h2>Link</h2>
-              <img src="static/digitized_daniel.png">
+            <h2>Flyte</h2>
+              <img src="static/flyte.png">
               <div class="flex-container">
-                <p>IoT Compatible discord bot with additional features such as facial/eye tracking, image generator, web scraping, and pomodoro timer.</p>
-                <p style="font-size: 0.72rem; padding: 0; padding-bottom: 10px;">Technologies Used: Nextcord API, OpenCV, TuyaIoT API, PIL, asyncio</p>
+                <p>Currently Working on a 3D multiplayer FPS.</p>
+                <p style="font-size: 0.72rem; padding: 0; padding-bottom: 10px;"><u>Technologies Used:</u> C#, Unity Game Engine, Blender</p>
               </div>
             </div>
         </div>
@@ -63,10 +63,10 @@
         <div class="grid-item">
           <div class="content-wrapper">
             <h2>Auto Food</h2>
-              <img src="static/digitized_daniel.png">
+              <img src="static/autofood.jpg">
               <div class="flex-container">
-                <p>IoT Compatible discord bot with additional features such as facial/eye tracking, image generator, web scraping, and pomodoro timer.</p>
-                <p style="font-size: 0.72rem; padding: 0; padding-bottom: 10px;">Technologies Used: Nextcord API, OpenCV, TuyaIoT API, PIL, asyncio</p>
+                <p style="padding-right:10px;">Currently working on a mobile application that finds the nearest restaraunt of any cuisine at random within the users area. Compatible with all mobile OS.</p>
+                <p style="font-size: 0.72rem; padding: 0; padding-bottom: 10px;"><u>Technologies Used:</u> Dart, Flutter, Google Places API</p>
               </div>
             </div>
         </div>
@@ -74,10 +74,10 @@
         <div class="grid-item">
           <div class="content-wrapper">
             <h2>Spotify Playlist Sorter</h2>
-              <img src="static/digitized_daniel.png">
+              <img src="static/plsorter.png">
               <div class="flex-container">
-                <p>IoT Compatible discord bot with additional features such as facial/eye tracking, image generator, web scraping, and pomodoro timer.</p>
-                <p style="font-size: 0.72rem; padding: 0; padding-bottom: 10px;">Technologies Used: Nextcord API, OpenCV, TuyaIoT API, PIL, asyncio</p>
+                <p>Terminal based application that goes through users unorganized playlist and sorts each song into new genre based playlists.</p>
+                <p style="font-size: 0.72rem; padding: 0; padding-bottom: 10px;"><u>Technologies Used:</u> Python, Spotipy API, Last.fm API</p>
               </div>
             </div>
         </div>
