--- a/static/styles.css
+++ b/static/styles.css
@@ -176,8 +176,14 @@ section p {
 }
 .grid-item:hover {
   background-color: rgb(53, 53, 53);
-  cursor: pointer;
+  /* cursor: pointer; */
   transition: all 0.2s ease;
+}
+#digitized_daniel{
+  cursor: pointer;
+}
+.grid-item img {
+  cursor: pointer;
 }
 .grid-item h2 {
   color: rgb(233, 232, 232);
@@ -188,7 +194,7 @@ section p {
   padding-left: 1.25rem;
   color: aliceblue;
   font-family: cascadia code;
-  font-size: 1rem;
+  font-size: 0.9rem;
 }
 
 .content-wrapper {
@@ -209,6 +215,56 @@ section p {
   align-items: center;
   justify-content: center;
 }
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #161616;
+  margin: 5% auto;
+  padding: 20px;
+  border: 3px solid #330155;
+  width: 50%;
+  text-align: center;
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal a {
+  font-size: 1.5em;
+  font-family: cascadia code;
+  color: #9559af;
+}
+.modal a:hover {
+  color: #d4d4d4;
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+
 /* Style for the footer */
 footer {
   position: fixed;
