--- a/templates/tracks.html
+++ b/templates/tracks.html
@@ -24,7 +24,7 @@
         <div class="grid-wrapper">
             <div class="grid-item">
                 <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/6jo3Sv2PWgX7oX2gSsvbI5?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>🗣️🗣️🗣️</p></center>
+                <center><p>🗣️🗣️</p></center>
             </div>
             <div class="grid-item">
                 <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/7qPHokLDeNrXTWrjhgudLj?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
